--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "cli-tool",
+  "name": "flexquiz",
   "version": "1.0.0",
-  "description": "",
+  "description": "Game Dev Millionare!",
   "main": "index.js",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sidd2024/GameDEV-quiz"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
